# rust-journey

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  challenge  info.toml  install.sh  rust-journey-wrapper.sh
chapters/01_fundamentals/: 1.1_variables_and_types.md  README.md
chapters/01_fundamentals/01_hello_world/: 0_hello.rs  README.md  challenge.rs  hello.rs  learnings.md
chapters/01_fundamentals/02_variables/: 0_variables.rs  README.md  challenge.rs  learnings.md  variables.rs  variables_demo.rs
chapters/01_fundamentals/03_data_types/: README.md
chapters/01_fundamentals/03_functions/: 2_return_values.rs  3_function_expressions.rs  README.md
chapters/01_fundamentals/04_data_types/: README.md
chapters/01_fundamentals/04_functions/: 0_basic_functions.rs  1_function_parameters.rs  2_return_values.rs  3_function_expressions.rs  4_advanced_functions.rs  README.md
chapters/01_fundamentals/05_control_flow/: 0_control_flow.rs  1_if_expressions.rs  2_loop_expressions.rs  3_while_loops.rs  4_for_loops.rs  5_match_expressions.rs  6_if_while_let.rs  README.md
chapters/02_core_concepts/: README.md
chapters/02_core_concepts/01_ownership/: 0_ownership.rs  README.md
chapters/02_core_concepts/02_borrowing/: 0_borrowing.rs  README.md
chapters/02_core_concepts/03_structs/: 0_structs.rs  README.md
chapters/02_core_concepts/04_enums/: 0_enums.rs  README.md
chapters/02_core_concepts/05_modules/: 0_modules.rs  README.md
chapters/02_core_concepts/06_collections/: README.md
chapters/02_core_concepts/07_error_handling/: README.md
chapters/02_core_concepts/08_generics_traits_lifetimes/: README.md
chapters/05_testing/: README.md
chapters/06_error_handling/: 0_error_handling.rs
file_watcher/: Cargo.toml  info.toml  test.txt  variables
file_watcher/examples/01_hello_world/: hello.rs  hello_binary
file_watcher/examples/02_variables/: variables.rs  variables_original.rs  variables_test
file_watcher/src/: commands.rs  exercise.rs  main.rs
rust-journey-cli/: .gitignore  Cargo.toml  README.md  info.toml  install.sh
rust-journey-cli/src/: commands.rs  exercise.rs  main.rs
src/: lib.rs
(+75 files in other folders)
