[package]
name = "file_watcher"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that watches files and executes logic when they change"

[dependencies]
notify = "6.1"                                     # File system notifications
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
chrono = "0.4"                                     # Date and time functionality
anyhow = "1.0"                                     # Error handling
toml = "0.8"                                       # TOML parsing
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
console = "0.15"                                   # Terminal styling
indicatif = "0.17"                                 # Progress bars
termion = "2.0"                                    # Terminal input/output