[package]
name = "rust-journey-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to guide learners through the Rust Journey course"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
anyhow = "1.0"                                     # Error handling
toml = "0.8"                                       # TOML parsing
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
notify = "6.1"                                     # File system notifications
console = "0.15"                                   # Terminal styling
indicatif = "0.17"                                 # Progress bars
